# img-paste

./: .gitignore  CLAUDE.md  README.md  imgpaste.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: imgpaste.icns  make_icon.py
imgpaste/: __init__.py  __main__.py  _exec.py  app.py  config.py  cropper.py  hotkeys.py  icon.py  paste.py  picker.py  shake.py  sound.py  watcher.py  wheel.py
imgpaste/clipboard/: __init__.py  macos.py  windows.py
